--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="r.png" />
+    <link rel="icon" type="image/svg+xml" href="icons/r-light.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RStore</title>
+    <title>R-Store</title>
     
   </head>
   <body>
